--- a/src/assets/sass/2-base/_2-base.scss
+++ b/src/assets/sass/2-base/_2-base.scss
@@ -1,3 +1,4 @@
-@import 'reset';
-@import 'global';
-@import 'typography';
+@import "reset";
+@import "normalize";
+@import "global";
+@import "typography";
