bootstrap grid, jquery, some change on 7-1 pattern, project snippets

--- a/src/assets/sass/1-helpers/_variables.scss
+++ b/src/assets/sass/1-helpers/_variables.scss
@@ -1,13 +1,14 @@
-// breakpoints
-$small: 768px;
-$medium: 992px;
-$large: 1200px;
+// breakpoints min width
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
 
 // fonts
 $font-stack: Helvetica, sans-serif;
 
 // colors
-$base-color: black;
-$primary-color: red;
-$secondary-color: orangered;
-$accent-color: orange;
+// $base-color: black;
+// $primary-color: red;
+// $secondary-color: orangered;
+// $accent-color: orange;
