--- a/src/assets/sass/1-helpers/_mixins.scss
+++ b/src/assets/sass/1-helpers/_mixins.scss
@@ -1,14 +1,18 @@
-@mixin breakpoint($point) {
-  @if $point == large {
-    @media (min-width: $large) {
+@mixin breakpoint($breakpoint) {
+  @if $breakpoint == xl {
+    @media (min-width: $xl) {
       @content;
     }
-  } @else if $point == medium {
-    @media (min-width: $medium) {
+  } @else if $breakpoint == lg {
+    @media (min-width: $lg) {
       @content;
     }
-  } @else if $point == small {
-    @media (min-width: $small) {
+  } @else if $breakpoint == md {
+    @media (min-width: $md) {
+      @content;
+    }
+  } @else if $breakpoint == sm {
+    @media (min-width: $sm) {
       @content;
     }
   }
