--- a/src/assets/sass/1-helpers/_variables.scss
+++ b/src/assets/sass/1-helpers/_variables.scss
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Poppins";
+    src: url("/dist/assets/fonts/Poppins-Regular.woff") format("woff"),
+        url("/dist/assets/fonts/Poppins-Regular.woff2") format("woff2");
+}
+
 // breakpoints min width
 $sm: 576px;
 $md: 768px;
@@ -8,7 +14,8 @@ $xl: 1200px;
 $font-stack: Helvetica, sans-serif;
 
 // colors
-// $base-color: black;
-// $primary-color: red;
-// $secondary-color: orangered;
-// $accent-color: orange;
+$white: #ececec;
+$grey: #aaaaaa;
+$dark-blue: #30475e;
+$black: #222831;
+$orange: #f2a365;
