--- a/src/assets/sass/2-base/_typography.scss
+++ b/src/assets/sass/2-base/_typography.scss
@@ -1,33 +1,42 @@
+p,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  line-height: 1.5;
+    line-height: 1.5;
 }
 
 p {
-  line-height: 1.2;
-  font-size: 16px;
+    font-size: 1rem;
+    color: $white;
 
-  &:not(:last-of-type) {
-    margin-bottom: 1rem;
-  }
+    &:not(:last-of-type) {
+        margin-bottom: 1rem;
+    }
 }
 
-h1 {
-  font-size: 42px;
+.text-accent {
+    color: $orange !important;
 }
 
-h2 {
-  font-size: 33px;
+.text-primary {
+    color: $white !important;
 }
 
-h3 {
-  font-size: 26px;
+.text-secondary {
+    color: $grey !important;
 }
 
-h4 {
-  font-size: 20px;
+.text-subheader {
+    font-size: 1.625rem;
+}
+
+.text-header {
+    font-size: 2.625rem;
+}
+
+.text-jumbo {
+    font-size: 3.2375rem;
 }
