--- a/src/assets/sass/5-pages/_work.scss
+++ b/src/assets/sass/5-pages/_work.scss
@@ -1,6 +1,6 @@
 #work {
     .work {
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
         position: relative;
         display: flex;
 
@@ -10,6 +10,7 @@
             margin-bottom: 1rem;
 
             img {
+                object-fit: cover;
                 height: 250px;
                 width: 100% !important;
                 background-color: $dark-blue;
@@ -29,19 +30,19 @@
                 @include breakpoint(md) {
                     right: -60px;
                     left: -60px;
-                    display: block;
-                    transform: translateX(90%);
+                    display: none;
+                    transform: translateX(60%);
                 }
 
                 @include breakpoint(lg) {
                     right: -80px;
-                    transform: translateX(60%);
+                    transform: translateX(50%);
                 }
 
                 @include breakpoint(xl) {
                     right: -200px;
                     left: 0;
-                    transform: translateX(50%);
+                    transform: translateX(40%);
                 }
             }
         }
@@ -52,6 +53,7 @@
         }
 
         &__link {
+            display: flex;
             margin-top: 2rem;
             margin-bottom: 2rem;
             align-self: center;
@@ -61,11 +63,19 @@
                 align-self: flex-end;
             }
 
-            img {
-                width: 22px;
-                // width: 28px;
-                margin-left: 1rem;
+            p {
+                font-style: italic;
             }
+            
+            a {
+                margin-left: 1rem;
+                
+                img {
+                    width: 22px;
+                    // width: 28px;
+                }
+            }
+
         }
     }
 }
