--- a/src/assets/sass/5-pages/_work.scss
+++ b/src/assets/sass/5-pages/_work.scss
@@ -9,6 +9,11 @@
             width: 100%;
             margin-bottom: 1rem;
 
+            &:hover {
+               opacity: 0.7;
+               cursor: pointer;
+            }
+
             img {
                 object-fit: cover;
                 height: 250px;
